--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -91,7 +91,9 @@ tags:     Etc
     <tr><td>Any person who can stop the Rajag from being bored can choose their own reward</td><td>라자그를 지루하지 않게 할 수 있는 누구든지, 자신만의 보상을 선택할 수 있다.(who ... bored 는 any person을 설명한다.)</td></tr>
     <tr><td>The director tells the crew what time to be on location</td><td>"to be"는 "도착하다"</td></tr>
     <tr><td>Some movie stars like to show up late for a shoot</td><td>일부 영화 스타들은 촬영장에 늦게 도착하는 것을 좋아한다(show up : 나타나다)</td></tr>
-    <tr><td></td><td></td></tr>
+    <tr><td>Robots can help perform operations in hospitals</td><td>로봇은 병원에서 수술을 수행하는 데 도움을 줄 수 있습니다</td></tr>
+    <tr><td>They can collect information in space and deep under water</td><td>그들은 우주와 깊은 물속에서 정보를 수집할 수 있습니다</td></tr>
+    <tr><td>6월 16일</td><td></td></tr>
     <tr><td></td><td></td></tr>
 </table>
 
