--- a/_posts/Redis/2023-04-01-Setting.md
+++ b/_posts/Redis/2023-04-01-Setting.md
@@ -14,7 +14,7 @@ tags:     Redis
 {:toc}
 
 ## Redis란?
-- Key, Value 구조의 비정형 데이터를 저장하고 관리하기 위한 오픈 소스 기반의 비관계형 데이터 베이스 관리 시스
+- Key, Value 구조의 비정형 데이터를 저장하고 관리하기 위한 오픈 소스 기반의 비관계형 데이터 베이스 관리 시스템
 - 데이터베이스, 캐시, 메세지 브로커로 사용되며 인메모리 데이터 구조를 가진 저장소
 - db-engines.com 에서 key, value 저장소 중 가장 순위가 높다
   
