--- a/_posts/Spring/2022-08-02-Gateway.md
+++ b/_posts/Spring/2022-08-02-Gateway.md
@@ -6,7 +6,7 @@ category: Spring
 more_posts: posts.md
 tags:     Spring
 ---
-# [ApiGateway] SpringBoot MSA를 위한 Api Gateway
+# [Spring-cloud] SpringBoot MSA를 위한 Api Gateway
 
 <!--more-->
 <!-- Table of contents -->
