--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -102,3 +102,7 @@ tags:     Etc
   
 ## help
 > 영어에서 "help" 동사는 다른 동사와 함께 사용될 때 특별한 구조를 가집니다. "help" 동사 다음에는 기본형 동사(to 없이) 또는 "to"를 포함한 무한형 동사가 올 수 있습니다.
+
+## 미래 표현 차이
+- Be going to : 기간이 정해져 있을때 (+ plan)
+- will : 기간이 정해져 있지 않을때 주로 사용
