--- a/_posts/Etc/2023-02-11-docker.md
+++ b/_posts/Etc/2023-02-11-docker.md
@@ -22,6 +22,12 @@ tags:     Etc
 마지막으로, Docker Compose를 사용하여 Docker 컨테이너를 실행하는 방법을 설명하겠다. 먼저, docker-compose를 설치한다. 설치가 완료되면, 프로젝트 루트 디렉토리에 docker-compose.yml 파일을 작성한다. 이 파일에는 서비스 정의, 빌드 설정, 포트 매핑 등의 정보를 포함한다. 터미널에서 Docker Compose 실행 명령어를 입력하면, 정의된 설정에 따라 Docker 컨테이너가 실행된다.  
 이 과정을 통해 IntelliJ 또는 Gradle을 사용하여 생성한 Jar 파일을 Docker 이미지로 빌드하고, Docker Compose를 통해 컨테이너를 실행할 수 있다. 이를 통해 개발 환경을 보다 효율적으로 관리하고 배포할 수 있다.
 
+## Docker 및 Docker-compose 설치
+```shell
+$ brew install --cask docker
+$ brew install docker-compose
+```
+
 ## Docker Network 설정
 > 지금까지 여러 서비스들이 동일한 PC에서 실행되어 같은 내부 IP 대역폭에서 통신할 수 있었다. 그러나 Docker의 경우, 가상화된 머신이기 때문에 별도의 설정 없이는 같은 네트워크로 인식되지 않아 내부 IP로 통신할 수 없다. 이를 해결하기 위해 Docker Network 설정을 통해 동일한 네트워크 환경을 구축해 보자.
 
@@ -36,6 +42,12 @@ $ docker network create --gateway 172.18.0.1 --subnet 172.18.0.0/16 ecommerce-ne
 $ docker network inspect ecommerce-network
 ```
 ### 스프링부트 내부에 Dockerfile을 만들고 하기 내용을 입력한다.
+> 스프링클라우드 강의에 나온 서비스를 예시로 하며, 하기 서비스 순으로 설명한다.
+
+1. config service
+2. Discovery Service
+3. Gateway Service
+4. Prometheus & Grafana
 
 1. config service
 ```Dockerfile
@@ -50,4 +62,276 @@ COPY build/libs/config-1.0.jar Config.jar
 #컨테이너가 시작될 때 실행할 명령을 지정한다. 여기서는 java -jar Config.jar 명령을 실행하여 JAR 파일을 실행한다. ENTRYPOINT는 컨테이너가 시작될 때 항상 실행되는 명령을 정의한다.
 ENTRYPOINT ["java", "-jar", "Config.jar"]
 ```
+```yml
+spring:
+  application:
+    name: config-service
+  rabbitmq:
+    host: rabbitmq # IP가 아닌 컨테이너 이름으로 수정
+    port: 5672
+    username: guest
+    passowrd: guest
 
+...
+
+encrypt:
+  key-store:
+    localtion: file:/encryptionKey.jks # 컨테이너 키 경로로 수정
+    password: 1q2w3e4r
+    alias: encryptionKey
+
+```
+```shell
+# jar 생성 
+$ gradle build
+
+# docker image 생성
+docker build -t dadaok/config:1.0 .
+```
+2. Discovery Service
+```Dockerfile
+FROM openjdk:17-ea-11-jdk-slim
+VOLUME /tmp
+COPY build/libs/discovery-1.0.jar DiscoveryService.jar
+ENTRYPOINT ["java", "-jar", "DiscoveryService.jar"]
+```
+```yml
+spring:
+  application:
+    name: discovery
+  cloud:
+    config:
+      uri: http://config-service:8888 # config 서버 이름으로 입력해 준다.
+      name: discovery
+```
+```shell
+# jar 생성 
+$ gradle build
+
+# docker image 생성
+docker build -t dadaok/config:1.0 .
+```
+3. Gateway Service(나머지 서비스들은 Gateway과 동일하다.)
+```Dockerfile
+FROM openjdk:17-ea-11-jdk-slim
+VOLUME /tmp
+COPY build/libs/gateway-1.0.jar GatewayService.jar
+ENTRYPOINT ["java", "-jar", "GatewayService.jar"]
+```
+```shell
+# jar 생성 
+$ gradle build
+
+# docker image 생성
+docker build -t dadaok/gateway:1.0 .
+```
+4. Prometheus & Grafana(prometheus.yml 수정)
+```yml
+scrape_configs:
+  - job_name: "prometheus"
+    static_configs:
+      - targets: ["prometheus:9090"]
+  - job_name: "user-service"
+    scrape_interval: 15s
+    metrics_path: "/user-service/actuator/prometheus"
+    static_configs:
+      - targets: ["user-service:8000"] # localhost:{port}로 등록되어 있는 targets 부분을 {container-name}:{port}형식으로 변경
+```
+
+### 도커 이미지 확인
+> 생성된 도커 이미지를 확인한다.
+
+```shell
+$ docker images
+```
+
+### Docker 이미지 실행
+```shell
+# RabbitMQ:
+docker run -d --name rabbitmq -e RABBITMQ_DEFAULT_USER=guest -e RABBITMQ_DEFAULT_PASS=guest -p 15672:15672 -p 5672:5672 -p 15671:15671 -p 5671:5671 -p 4369:4369 rabbitmq:management
+
+# Config Service:
+docker run -d --name config-service -e spring.profiles.active=default -p 8888:8888 dadaok/config:1.0
+
+# Discovery Service:
+docker run -d --name discovery-service -e spring.cloud.config.uri=http://config-service:8888 -p 8761:8761 dadaok/discovery:1.0
+
+# Gateway Service:
+docker run -d --name gateway-service -e spring.cloud.config.uri=http://config-service:8888 -e spring.rabbitmq.host=rabbitmq -e eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/ -p 8000:8000 dadaok/gateway:1.0
+
+# User Service:
+docker run -d --name user-service -e spring.cloud.config.uri=http://config-service:8888 -e spring.rabbitmq.host=rabbitmq -e spring.zipkin.base-url=http://zipkin:9411 -e eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/ -e logging.file=/api-logs/users-ws.log dadaok/user:1.0
+
+# Order Service:
+docker run -d --name order-service -e spring.zipkin.base-url=http://zipkin:9411 -e eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/ -e spring.datasource.url=jdbc:mariadb://mariadb:3306/mydb -e logging.file=/api-logs/orders-ws.log dadaok/order:1.0
+
+# Zipkin:
+docker run -d --name zipkin -p 9411:9411 openzipkin/zipkin
+
+# Prometheus:
+docker run -d --name prometheus -p 9090:9090 -v ./thirdparty/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml prom/prometheus
+
+# Grafana:
+docker run -d --name grafana -p 3000:3000 grafana/grafana
+
+# MariaDB:
+docker run -d --name mariadb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=mydb -p 3306:3306 mariadb:latest
+
+# Zookeeper:
+docker run -d --name zookeeper -p 2181:2181 --network ecommerce-network --ip 172.18.0.100 wurstmeister/zookeeper
+
+# Kafka:
+docker run -d --name kafka -p 9092:9092 -e KAFKA_ADVERTISED_HOST_NAME=172.18.0.101 -e KAFKA_CREATE_TOPICS="test:1:1" -e KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181 -v /var/run/docker.sock:/var/run/docker.sock --network ecommerce-network --ip 172.18.0.101 wurstmeister/kafka
+```
+
+### docker-compose를 통한 배포
+```yml
+version: "3.6"
+services:
+
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:management
+    environment:
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+    networks:
+      - ecommerce-network
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+      - "15671:15671"
+      - "5671:5671"
+      - "4369:4369"
+
+  config-service:
+    container_name: config-service
+    image: dadaok/config:1.0
+    environment:
+      spring.profiles.active: "default"
+    ports:
+      - "8888:8888"
+    networks:
+      - ecommerce-network
+    depends_on:
+      - rabbitmq
+
+  discovery-service:
+    container_name: discovery-service
+    image: dadaok/discovery:1.0
+    environment:
+      spring.cloud.config.uri: "http://config-service:8888"
+    ports:
+      - "8761:8761"
+    networks:
+      - ecommerce-network
+    depends_on:
+      - config-service
+
+  gateway-service:
+    container_name: gateway-service
+    image: dadaok/gateway:1.0
+    environment:
+      spring.cloud.config.uri: "http://config-service:8888"
+      spring.rabbitmq.host: "rabbitmq"
+      eureka.client.serviceUrl.defaultZone: "http://discovery-service:8761/eureka/"
+    ports:
+      - "8000:8000"
+    networks:
+      - ecommerce-network
+    depends_on:
+      - discovery-service
+
+  user-service:
+    container_name: user-service
+    image: dadaok/user:1.0
+    environment:
+      spring.cloud.config.uri: "http://config-service:8888"
+      spring.rabbitmq.host: "rabbitmq"
+      spring.zipkin.base-url: "http://zipkin:9411"
+      eureka.client.serviceUrl.defaultZone: "http://discovery-service:8761/eureka/"
+      logging.file: "/api-logs/users-ws.log"
+    depends_on:
+      - gateway-service
+      - zipkin
+      - rabbitmq
+
+  order-service:
+    container_name: order-service
+    image: dadaok/order:1.0
+    environment:
+      spring.zipkin.base-url: "http://zipkin:9411"
+      eureka.client.serviceUrl.defaultZone: "http://discovery-service:8761/eureka/"
+      spring.datasource.url: "jdbc:mariadb://mariadb:3306/mydb"
+      logging.file: "/api-logs/orders-ws.log"
+    depends_on:
+      - gateway-service
+      - zipkin
+      - rabbitmq
+
+  # third-party
+  zipkin:
+    container_name: zipkin
+    image: openzipkin/zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - ecommerce-network
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    networks:
+      - ecommerce-network
+    volumes:
+      - ./thirdparty/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - ecommerce-network
+
+  mariadb:
+    container_name: mariadb
+    image: mariadb:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_DATABASE: "mydb"
+    ports:
+      - "3306:3306"
+    networks:
+      - ecommerce-network
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+    networks:
+      ecommerce-network:
+        ipv4_address: 172.18.0.100
+
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 172.18.0.101
+      KAFKA_CREATE_TOPICS: "test:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
+    networks:
+      ecommerce-network:
+        ipv4_address: 172.18.0.101
+
+networks:
+  ecommerce-network:
+    external: true
+```
