--- a/_posts/CICD/2023-02-11-docker.md
+++ b/_posts/CICD/2023-02-11-docker.md
@@ -2,9 +2,9 @@
 layout:   post
 title:    "Docker"
 subtitle: "Docker 설정"
-category: Etc
+category: CI/CD
 more_posts: posts.md
-tags:     Etc
+tags:     CI/CD
 ---
 # Docker
 
