--- a/_posts/Algorithm/2024-07-04-programmers-92344.md
+++ b/_posts/Algorithm/2024-07-04-programmers-92344.md
@@ -37,7 +37,44 @@ tags:     Algorithm
 
 
 ```java
+public int solution(int[][] board, int[][] skill) {
 
+    int[][] newArr = new int[board.length+1][board[0].length+1];
+
+    for(int i=0;i<skill.length;i++){
+        int degree = skill[i][5];
+        if(skill[i][0]==1) degree = degree*-1;
+        newArr[skill[i][1]][skill[i][2]] += degree;
+        newArr[skill[i][1]][skill[i][4]+1] += degree*-1; // 오른쪽
+        newArr[skill[i][3]+1][skill[i][2]] += degree*-1; // 아래
+        newArr[skill[i][3]+1][skill[i][4]+1] += degree; // 오른쪽 아래
+    }
+
+    // 열 누적합
+    for(int x=0;x<newArr[0].length;x++){
+        for(int y=1;y<newArr.length;y++){
+            newArr[y][x] = newArr[y-1][x] + newArr[y][x];
+        }
+    }
+
+    // 행 누적합
+    for(int y=0;y<newArr.length;y++){
+        for(int x=1;x<newArr[0].length;x++){
+            newArr[y][x] = newArr[y][x-1] + newArr[y][x];
+        }
+    }
+
+    int cnt = 0;
+    // 기존 배열에 더하기
+    for(int y=0;y<board.length;y++){
+        for(int x=0;x<board[0].length;x++){
+            if( (board[y][x] + newArr[y][x]) > 0 ) cnt++;
+        }
+    }
+
+
+    return cnt;
+}
 ```
 
 [Link](https://school.programmers.co.kr/learn/courses/30/lessons/92344)
