--- a/_posts/CICD/2023-02-11-docker.md
+++ b/_posts/CICD/2023-02-11-docker.md
@@ -49,7 +49,8 @@ $ docker network inspect ecommerce-network
 3. Gateway Service
 4. Prometheus & Grafana
 
-1. config service
+#### config service
+
 ```Dockerfile
 #베이스 이미지를 지정한다. 베이스 이미지가 로컬에 존재하지 않으면 Docker는 자동으로 해당 이미지를 Docker Hub(또는 다른 설정된 이미지 레지스트리)에서 다운로드한다.
 FROM openjdk:17-ea-11-jdk-slim
@@ -62,6 +63,7 @@ COPY build/libs/config-1.0.jar Config.jar
 #컨테이너가 시작될 때 실행할 명령을 지정한다. 여기서는 java -jar Config.jar 명령을 실행하여 JAR 파일을 실행한다. ENTRYPOINT는 컨테이너가 시작될 때 항상 실행되는 명령을 정의한다.
 ENTRYPOINT ["java", "-jar", "Config.jar"]
 ```
+
 ```yml
 spring:
   application:
@@ -81,6 +83,7 @@ encrypt:
     alias: encryptionKey
 
 ```
+
 ```shell
 # jar 생성 
 $ gradle build
@@ -88,13 +91,16 @@ $ gradle build
 # docker image 생성
 docker build -t dadaok/config:1.0 .
 ```
-2. Discovery Service
+
+#### Discovery Service
+
 ```Dockerfile
 FROM openjdk:17-ea-11-jdk-slim
 VOLUME /tmp
 COPY build/libs/discovery-1.0.jar DiscoveryService.jar
 ENTRYPOINT ["java", "-jar", "DiscoveryService.jar"]
 ```
+
 ```yml
 spring:
   application:
@@ -104,6 +110,7 @@ spring:
       uri: http://config-service:8888 # config 서버 이름으로 입력해 준다.
       name: discovery
 ```
+
 ```shell
 # jar 생성 
 $ gradle build
@@ -111,13 +118,16 @@ $ gradle build
 # docker image 생성
 docker build -t dadaok/config:1.0 .
 ```
-3. Gateway Service(나머지 서비스들은 Gateway과 동일하다.)
+
+#### Gateway Service(나머지 서비스들은 Gateway과 동일하다.)
+
 ```Dockerfile
 FROM openjdk:17-ea-11-jdk-slim
 VOLUME /tmp
 COPY build/libs/gateway-1.0.jar GatewayService.jar
 ENTRYPOINT ["java", "-jar", "GatewayService.jar"]
 ```
+
 ```shell
 # jar 생성 
 $ gradle build
@@ -125,7 +135,9 @@ $ gradle build
 # docker image 생성
 docker build -t dadaok/gateway:1.0 .
 ```
-4. Prometheus & Grafana(prometheus.yml 수정)
+
+#### Prometheus & Grafana(prometheus.yml 수정)
+
 ```yml
 scrape_configs:
   - job_name: "prometheus"
@@ -144,6 +156,41 @@ scrape_configs:
 ```shell
 $ docker images
 ```
+
+### 도커 명령어
+> 아래 깃 링크의 3번째 커맨드 명령어를 사용한다.
+
+[https://github.com/jenkinsci/docker/blob/master/README.md](https://github.com/jenkinsci/docker/blob/master/README.md)
+
+```shell
+# Dockerfile을 사용하여 Docker 이미지를 빌드(로컬 환경에만 저장 된다)
+docker build --tag=cicd-project -f Dockerfile
+# 이미지를 외부 레지스트리(예: Docker Hub, AWS ECR, Google Container Registry 등)로 전송하려면 docker push 명령어를 사용해야 한다.
+docker push <your-dockerhub-username>/cicd-project:latest
+# 현재 로컬 Docker 환경에 저장된 모든 Docker 이미지를 목록으로 보여준다
+docker images
+# 이미지에 대한 상세 정보를 출력한다
+docker image inspect cicd-project:latest
+# 실행 명령어
+docker run --name <도커서비스이름> -d -v jenkins_home:/var/jenkins_home -p 8080:8080 -p 50000:50000 --restart=on-failure jenkins/jenkins:lts-jdk17
+
+# 도커 컨테이너 중지
+docker stop <도커서비스이름>
+# 도커 컨테이너 삭제
+docker rm <도커서비스이름>
+# 도커 이미지 삭제
+docker rmi <도커이미지이름>
+```
+
+### 옵션 설명
+- docker run: 새로운 컨테이너를 생성하고 실행하는 명령어이다.
+- -d: 컨테이너를 백그라운드에서 실행한다. 이 옵션을 사용하면 터미널이 컨테이너의 로그에 붙잡히지 않고 바로 돌아온다.
+- -v jenkins_home:/var/jenkins_home: 볼륨을 마운트한다. 호스트의 jenkins_home 디렉토리를 컨테이너의 /var/jenkins_home 디렉토리에 연결한다. 이렇게 하면 Jenkins 데이터를 호스트에 저장할 수 있어 컨테이너를 삭제해도 데이터가 유지된다.
+- -p 8080:8080: 호스트의 8080 포트를 컨테이너의 8080 포트에 매핑한다. Jenkins의 웹 인터페이스에 접근하기 위해 사용된다.
+- -p 50000:50000: 호스트의 50000 포트를 컨테이너의 50000 포트에 매핑한다. 이는 Jenkins 에이전트와의 통신을 위해 사용된다.
+- --restart=on-failure: 컨테이너가 실패할 경우 자동으로 재시작한다. 컨테이너가 종료 코드가 0이 아닌 경우에만 재시작한다.
+- --name <서버이름>: 생성될 컨테이너의 이름을 지정한다. <서버이름> 부분을 원하는 이름으로 대체해야 한다.
+- jenkins/jenkins:lts-jdk17: 사용할 이미지와 태그를 지정한다. 여기서는 Jenkins의 LTS(Long Term Support) 버전 중 JDK 17이 포함된 이미지를 사용한다.
 
 ### Docker 이미지 실행
 ```shell
