--- a/_posts/CICD/2023-02-11-docker.md
+++ b/_posts/CICD/2023-02-11-docker.md
@@ -163,6 +163,8 @@ $ docker images
 [https://github.com/jenkinsci/docker/blob/master/README.md](https://github.com/jenkinsci/docker/blob/master/README.md)
 
 ```shell
+# 도커 로그인
+docker login
 # Dockerfile을 사용하여 Docker 이미지를 빌드(로컬 환경에만 저장 된다)
 docker build --tag=cicd-project -f Dockerfile
 # 이미지를 외부 레지스트리(예: Docker Hub, AWS ECR, Google Container Registry 등)로 전송하려면 docker push 명령어를 사용해야 한다.
