--- a/_posts/CICD/2023-02-11-docker.md
+++ b/_posts/CICD/2023-02-11-docker.md
@@ -175,7 +175,10 @@ docker images
 docker image inspect cicd-project:latest
 # 실행 명령어
 docker run --name <도커서비스이름> -d -v jenkins_home:/var/jenkins_home -p 8080:8080 -p 50000:50000 --restart=on-failure jenkins/jenkins:lts-jdk17
-
+# 현재 실행 중인 컨테이너 목록 확인
+docker ps
+# 모든 컨테이너 목록 확인 (실행 중이거나 중지된 컨테이너 모두)
+docker ps -a
 # 도커 컨테이너 중지
 docker stop <도커서비스이름>
 # 도커 컨테이너 삭제
