--- a/_posts/CICD/2024-07-04-jenkins.md
+++ b/_posts/CICD/2024-07-04-jenkins.md
@@ -57,6 +57,29 @@ sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 > jenkins 설치 및 설정 방법을 알아 본다.
 
 ### jenkins 설치
+> 도커로 설치하면 간편하긴 하지만 설정시 조금 더 복잡한 느낌이 든다. 서버 설치를 추가로 기술한다.
+
+1) 설치 url
+- [https://pkg.jenkins.io/redhat-stable/](https://pkg.jenkins.io/redhat-stable/)
+2) 터미널 작업
+```shell
+# 설치시 url은 최신버전으로 항상 바뀌니 확인 후 작업하자
+sudo wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo
+sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io-2023.key
+
+# 자바 및 젠킨스 설치
+sudo dnf install fontconfig java-17-openjdk
+sudo dnf install jenkins
+# 시작시 항상 실행
+sudo systemctl enable jenkins
+# 실행
+sudo systemctl start jenkins
+# 초기 패스워드 확인
+sudo cat /var/lib/jenkins/secrets/initialAdminPassword
+```
+
+
+### jenkins 설치(도커)
 > 젠킨스 설치를 진행 한다.
 
 1. 젠킨스 설치 url접속
