--- a/_posts/CICD/2023-02-11-docker.md
+++ b/_posts/CICD/2023-02-11-docker.md
@@ -49,6 +49,12 @@ $ docker network inspect ecommerce-network
 3. Gateway Service
 4. Prometheus & Grafana
 
+**참고**
+> 도커 이미지 푸시 시, 전체 이미지가 매번 업로드되는 것은 아니다. 도커는 이미지의 레이어를 기반으로 작동하며, 각 레이어는 변경된 부분만 업로드된다.  
+> 레이어 기반 구조: 도커 이미지는 여러 레이어로 구성되어 있다. 이미 동일한 레이어가 리포지토리에 존재한다면, 해당 레이어는 다시 업로드되지 않는다. 즉, 변경된 레이어만 새로운 레이어로 추가되어 푸시된다.  
+> 캐싱: 도커는 로컬에 저장된 이미지 레이어를 캐시하여, 이미 푸시된 레이어는 반복적으로 업로드하지 않는다. 이로 인해 푸시하는 시간과 대역폭이 절약된다.  
+> 결과적으로, 도커 이미지를 푸시할 때는 변경된 부분만 업로드되므로 전체 이미지가 매번 업로드되는 것은 아니다. 이 점은 도커의 효율성을 높이는 중요한 기능 중 하나이다.
+
 #### config service
 
 ```Dockerfile
